Update manifest and popup.js for localization: change app name to 'Insta Count' and update status messages to English.

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
             <input type="checkbox" id="toggleSwitch">
             <span class="slider round"></span>
         </label>
-        <span id="statusText">Erweiterung ist aktiviert</span>
+        <span id="statusText">Extension is active</span>
     </div>
     <script src="popup.js"></script>
 </body>
